# courtbooker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
courtbooker/: database.py  mapper.py  models.py  schemas.py  settings.py  util.py  worker.py
courtbooker/app/: api.py  frontend.py  main.py  mapper.py  refresh.py
courtbooker/scraper/: better.py  clubspark.py  tower_hamlets.py
courtbooker/templates/: courts.html  index.html
src/: api.py  config.py  database.py  email_sender.py  main.py  models.py  schemas.py  scraper.py  settings.py  util.py  worker.py
src/api/: app.py
src/app/: __init__.py  api.py  frontend.py
src/scraper/: __init__.py  better.py  clubspark.py  common.py
src/templates/: courts.html
tests/mapper/: test_get_distance_in_metres_to_venues.py  test_get_venues_by_location.py
tests/scraper/better/: test_parsers.py
tests/scraper/clubspark/: test_scraper.py
tests/util/: test_filter_out_single_sessions.py
