[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "courtbooker"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.29.0",
  "selenium>=4.9.1",
  "geckodriver-autoinstaller>=0.1.0",
  "json2html>=1.3.0",
  "lxml>=4.9,<4.9.3",
  "pydantic-settings>=2.0.1",
  "fastapi>=0.100.1",
  "uvicorn>=0.21.1",
]

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.219",
  "pytest-dotenv>=0.5.2",
  "watchdog>=2.1.9",
  "httpx>=0.23.2",
]

[tool.pytest.ini_options]
env_files = [".env.example"]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.coverage.paths]
source = ["scraper"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 25

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
